@@ -7,5 +7,5 @@ AUX iwar-total-fix.patch 898 RMD160 59c95b5c266816c644f66831699fe1ff0275e1e1 SHA
 AUX iwar.1 9354 RMD160 076bf806ba48293fbd48a766c2801e3ead531b63 SHA1 4808b68a91520bae5fc1d9f88ea2c3eda9173bf2 SHA256 f6c3969fbdfb0997224b6278a5a135d43db94deca30497a61d284c887888870a
 DIST iwar-0.071.tar.gz 1626581 RMD160 3b62908983edc98f675212239d47850121c3da8b SHA1 019c5d15204dc269b2f624c01d62e2c0cd7514eb SHA256 fac7b4801ad91e478e31f5da3b1feb7d3e2e09c6e281b0476f8c4adf42e52e6a
 EBUILD iwar-0.071.ebuild 921 RMD160 4f580db058cd7f7cb0cd501b81d8a88c419d98b7 SHA1 342f05fe0d400dde28f72c7901d14a056c3cb700 SHA256 483072113d5fdb835027b0123ec714aa0387b7e841f1ba6de1cb2d4187245e6f
-MISC ChangeLog 556 RMD160 6ad14e8b2ecd452f47f68da98db84eedc07705b7 SHA1 c35c62fdef03b8b14eecef096a3d5e54dddbfbfa SHA256 ec48095fce9cba502e29c10ac5a487c8b251db9b2986536e3db5237a775ad10b
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 677 RMD160 c2d39a3faecc8a4eefbb60fb7a40d54548645ed0 SHA1 40c4a6f53d6524b888e6d9f247d3e6ef81528f0d SHA256 d5c91c9c8cab5172b9419e2bc9127162f85ca43bce3b28c5b998243172dac593
+MISC metadata.xml 244 RMD160 776447e8117e88318a5fab265d9aa96f34ee6f71 SHA1 ed27ba5c80d55b733c53b41d181e693b7c14220a SHA256 9106a9e965a717d8a1b075ab28da827ae2290e6de18b46e9d8e18c664534e390
